--- a/microservice/package.json
+++ b/microservice/package.json
@@ -10,11 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "level": "^1.7.0",
-    "micro": "^8.0.4",
-    "then-levelup": "^1.0.2"
+    "level": "^5.0.1",
+    "micro": "^9.3.3"
   },
   "devDependencies": {
-    "mocha": "^3.5.2"
+    "mocha": "^6.1.4"
   }
 }
